The Resune Page is now mine and the about landing page has mostly been re-written

--- a/style.css
+++ b/style.css
@@ -130,6 +130,12 @@
   li { list-style: none; }
   
   img, ion-icon, a, button, time, span { display: block; }
+
+  .links {
+    text-decoration: underline;
+    color: var(--vegas-gold);
+    display: inline;
+  }
   
   button {
     font: inherit;
