--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,11 @@ main {
   font-weight: var(--fw-300);
 }
 
+.redText {
+  color: rgb(255, 0, 0);
+  font-weight: 500;
+}
+
 /*-----------------------------------*\
     #BLOG
   \*-----------------------------------*/
